--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,14 @@
-version: '3.6'
+version: '3.8'
 services:
   iris:
-    image: intersystemsdc/iris-community
-#    image: intersystemsdc/irishealth-community
-    restart: no
-    hostname: mini-docker
-    container_name: iris-mini-docker
-    command: /iris-main
-      - -a /home/irisowner/dev/ascript.sh
-      - -b /home/irisowner/dev/bscript.sh
-      - --ISCAgent false
-
-    ports: 
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    command: --check-caps false --ISCAgent false
+    ports:
       - 41773:1972
       - 42773:52773
+      - 53773
     volumes:
-      - ./:/home/irisowner/dev
+      - ./:/opt/irisapp
